--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html",
+    "deploy": "git push"
   },
   "keywords": [],
-  "author": "",
+  "author": "smixqse",
   "license": "ISC",
   "dependencies": {
     "babel-core": "^6.26.3",
